--- a/system-apps/app-generator/webClient/src/index.html
+++ b/system-apps/app-generator/webClient/src/index.html
@@ -14,15 +14,12 @@
 	<meta charset="utf-8">
 	<title>Zowe App Generator</title>
 	<base href="./">
-  <script>
-    if(exports){
-    var ZoweZLUX_tempExports = exports;
-    }
-    var exports = {"__esModule": true};
-    
-  </script>
+  <script type="text/javascript" src="/ZLUX/plugins/org.zowe.zlux.bootstrap/web/adapter-init.js"></script>
+  <script type="text/javascript" src="/ui/v1/zlux/ZLUX/plugins/org.zowe.zlux.bootstrap/web/adapter-init.js"></script>
   <script type="text/javascript" src="/lib/org.zowe.zlux.logger/0.9.0/logger.js"></script>
+  <script type="text/javascript" src="/ui/v1/zlux/lib/org.zowe.zlux.logger/0.9.0/logger.js"></script>
   <script type="text/javascript" src="/ZLUX/plugins/org.zowe.zlux.bootstrap/web/iframe-adapter.js"></script>
+  <script type="text/javascript" src="/ui/v1/zlux/ZLUX/plugins/org.zowe.zlux.bootstrap/web/iframe-adapter.js"></script>
 	<meta name="theme-color" content="#ffff00">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
