--- a/system-apps/app-prop-viewer/webClient/src/index.html
+++ b/system-apps/app-prop-viewer/webClient/src/index.html
@@ -21,7 +21,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root><app-prop></app-prop></app-root>
 </body>
 </html>
 
